Fixed spacing for the NASA footer information

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -649,7 +649,7 @@ main {
 
 /* Footer */
 .nasa-information {
-  padding-top: 1.5rem;
+  padding-top: 3.5rem;
   text-align: center;
   font-size: var(--font-size-small);
 }
